# EduFlow-Team-orch

./: .env.example  .gitignore  .pre-commit-config.yaml  1  CLAUDE.md  Dockerfile  README.md  T-118-4-questions-summary-2026-07-06.md  T-153-阶段分析-2026-07-07.md  docker-compose.yml  eduflow.example.toml  eduflow.toml  extract_dse_pdfs.py  findclass-prototype.html  pyproject.toml  setup.py  strict-review-report.md  strict-review-summary.json
.agent_history/: 1783583393146_r5i6zu_info.json  1783583409922_4alc34_chat.json  1783583409922_4alc34_info.json  1783583453612_wj9qz4_chat.json  1783583453612_wj9qz4_info.json  1783583656270_5gd4w2_info.json  1783583689077_wsx6ib_info.json  1783583692759_sp4ykn_info.json  1783583806569_38b1dk_info.json  1783583871536_sqcsui_info.json  1783583877418_civpzr_info.json  1783583920996_9yl5p0_info.json  1783583957833_4x4tg8_chat.json  1783583957833_4x4tg8_info.json  1783584763085_igsv22_info.json  1783584766543_jmsb9w_info.json  1783584769544_axuevp_info.json
.claude/: settings.json
_meta_history/: T-91-review-report.md  T-93-review-report.md  T-95-review-report.md  T-97-review-report.md  T-99-review-report.md
content/: ap-optimization-plan.md  ap-physics-c-em  qbank-dedup-dryrun-plan-v2.md  qbank-dedup-dryrun-plan-v3.md  qbank-dedup-dryrun-plan.md  qbank-dedup-v3-maps.json  qbank-renumber-map-numeric.json  qbank-unified-manifest.csv  qbank-verification-report.md  unified_manifest.csv
docs/: AGENT_CHROME_WEB_ACCESS.md  DEPLOYMENT.md  EDUFLOW_12_AGENT_BLUEPRINT.md  EDUFLOW_GROWTH_PLAN.md  HERMES_V1_KNOWLEDGE_STEWARD.md  README_zh.md  (+20 more)
(+7393 files in other folders)
