[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eduflow"
version = "0.1.0"
description = "Harness your Claude Code: multi-agent orchestrator over tmux + Feishu"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["claude-code", "agents", "tmux", "feishu", "lark", "llm-orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

[project.optional-dependencies]
vector = ["lancedb>=0.4", "sentence-transformers>=2.2"]

[project.urls]
Homepage = "https://github.com/zylMozart/EduFlow"
Repository = "https://github.com/zylMozart/EduFlow"
Issues = "https://github.com/zylMozart/EduFlow/issues"

[project.scripts]
eduflow = "eduflow.cli:main"
eduflowteam = "eduflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"